--- a/web/content/index.html
+++ b/web/content/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
-<!--
-Copyright 2018 The Go Authors. All rights reserved.
-Use of this source code is governed by a BSD-style
-license that can be found in the LICENSE file.
--->
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Go wasm</title>
+    <title>Algo IUT Transpiler to C++</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
