--- a/web/content/index.html
+++ b/web/content/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <p> Repository: <a href="https://github.com/ThomasRubini/algo-iut">https://github.com/ThomasRubini/algo-iut</a> (please send some pull requests to help:) )</p>
   <script src="https://unpkg.com/monaco-editor@latest/min/vs/loader.js"></script>
   <script src="wasm_exec.js"></script>
   <script src="script.js"></script>
